--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.csg</groupId>
-    <artifactId>search-indexer</artifactId>
+    <artifactId>csg-search-indexer</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <name>Search Indexer</name>
