--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>RELEASE</version>
+            <version>5.10.1</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -30,10 +30,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
+                <version>3.3.0</version>
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>com.csg.searchindexer.SearchIndexer</mainClass>  <!-- Change this -->
+                            <mainClass>com.csg.searchindexer.SearchIndexer</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
@@ -42,4 +43,3 @@
     </build>
 
 </project>
-
